objects/Partner_Agreement_Role__c.object
<CustomObject>
    <description>Used to capture the contacts and their specific role in a partner agreement.  A contact may have many roles across many agreements.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Master Detail to contact record</description>
        <inlineHelpText>Lookup to a contact record</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partner Agreements</relationshipLabel>
        <relationshipName>Partner_Agreement_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partner_Agreement__c</fullName>
        <description>used to related the role record to a partner agreement</description>
        <label>Partner Agreement</label>
        <referenceTo>Partner_Agreement__c</referenceTo>
        <relationshipLabel>Partner Agreement Contact Roles</relationshipLabel>
        <relationshipName>Partner_Agreement_Roles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>list of potential roles a contact may play</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>MKTG</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>Corp MKTG</fullName>
                </value>
                <value>
                    <fullName>SSL Report</fullName>
                </value>
                <value>
                    <fullName>Prerelease</fullName>
                </value>
                <value>
                    <fullName>Corp MKTG EMEA</fullName>
                </value>
                <value>
                    <fullName>Corp MKTG EMEA, INDIA</fullName>
                </value>
                <value>
                    <fullName>Corp MKTG WW</fullName>
                </value>
                <value>
                    <fullName>T&amp;C Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSL_Survey_Response_Date__c</fullName>
        <description>Used to capture the date of the survey response. Utilized in workflow to make the send SSL Survey checkbox null. This field will be nulled based on the Send SSL Survey being not null.</description>
        <inlineHelpText>This field will be nulled based on the Send SSL Survey being not null.</inlineHelpText>
        <label>SSL Survey Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Send_SSL_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to trigger SSL renewal email workflows.  Should not be exposed in the UI except for testing OR to defined partners / connection users..  checked by manual or data loader operation and unchecked by workflow as a result of an update from GetFeedback.  This field will be updated to null via workflow rules when the SSL survey response date field is not null</description>
        <inlineHelpText>This field will be updated to null via workflow rules when the SSL survey response date field is not null</inlineHelpText>
        <label>Send SSL Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_T_C_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to trigger renewal email workflows.  Should not be exposed in the UI except for testing OR to defined partners / connection users..  checked by manual or data loader operation and unchecked by workflow as a result of an update from GetFeedback.</description>
        <label>Send T&amp;C Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Siebel_ID__c</fullName>
        <externalId>true</externalId>
        <label>Siebel ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>T_C_Survey_Response_Date__c</fullName>
        <description>Used to capture the date of the survey response.  Utilized in workflow to make the send T&amp;C Survey checkbox null.  This field will be nulled based on the Send T&amp;C Survey being not null.</description>
        <label>T&amp;C Survey Response Date</label>
        <type>Date</type>
    </fields>
    <label>Partner Agreement Role</label>
    <nameField>
        <displayFormat>PAR-{000000}</displayFormat>
        <label>Partner Agreement Role</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Agreement Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>